kubernetes/frontend.yaml
# kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dersplatform
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dersplatform
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 269174115166.dkr.ecr.eu-north-1.amazonaws.com/ogret.io/frontend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
